--tests arreglados